<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context=".AddProveedor" >

     <EditText
        android:id="@+id/idid"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/idG"
        android:background="#fff"
        android:layout_height="40dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_below="@+id/id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/proveedores"
        android:background="#fff"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/idid"
        android:layout_below="@+id/idid"
        android:layout_marginTop="30dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/id" />

</RelativeLayout>
