

<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue" 

>

    <!--
         As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
    -->



    <!--
         android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view.
    -->

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:stretchColumns="0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <TableRow android:id="@+id/tableRow7" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
                    <EditText
                        android:id="@+id/txtFecha"
                        android:layout_height="40dp"
                        android:background="#fff"
                        android:ems="10"
                        android:inputType="date" >

        </EditText>
            
        </TableRow>



         <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

                        <Spinner
                            android:id="@+id/spinner1"
                            android:layout_marginTop="30dp"
                            android:spinnerMode="dialog" />

        </TableRow>


        <TableRow
            android:id="@+id/buscarG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
                        <Spinner
			                android:id="@+id/spGenero"
			                android:layout_marginTop="30dp"
			                android:spinnerMode="dialog" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
                        
                        <EditText
                            android:id="@+id/txtCant"
                            android:layout_height="40dp"
                            android:layout_marginTop="40dp"
                            android:background="#fff"
                            android:ems="10"
                            android:hint="@string/cantidad"
                            android:inputType="numberDecimal" >

            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
                        
                        <EditText
                            android:id="@+id/txtPrecio"
                            android:layout_height="40dp"
                            android:layout_marginTop="20dp"
                            android:background="#fff"
                            android:ems="10"
                            android:hint="@string/precio"
                            android:inputType="numberDecimal" />
            
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
                        
                        <Button
                            android:id="@+id/btSigAdd"
                            android:layout_marginTop="70dp"
                            android:text="@string/siguiente" />
            
        </TableRow>
         <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

			             <Button
			                 android:id="@+id/btguardar"
			                 android:layout_marginTop="10dp"
			                 android:text="@string/guardar" />
            
        </TableRow>
    </TableLayout>
    
</ScrollView>



    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer"
        android:choiceMode="singleChoice"
        android:divider="@color/divider"
        android:dividerHeight="2dp" />

</android.support.v4.widget.DrawerLayout>