

<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layoutC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue" 
>

    <!--
         As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
    -->



    <!--
         android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view.
    -->

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:stretchColumns="0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

        <TableRow android:id="@+id/tableRow4" >
                  <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />  
        </TableRow>



    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

    </TableRow>
        <TableRow android:id="@+id/tableRow5" >
                    <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iva"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtIVA"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/iva"
            android:inputType="numberDecimal" />

    </TableRow>
        <TableRow android:id="@+id/tableRow6" >
                   <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/impuestos"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium" /> 
        </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtImp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/impuestos"
            android:inputType="numberDecimal" />

    </TableRow>
     

    </TableLayout>
    




    <ListView
        android:id="@+id/left_drawerC"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer"
        android:choiceMode="singleChoice"
        android:divider="@color/divider"
        android:dividerHeight="2dp" />

</android.support.v4.widget.DrawerLayout>